--- a/client/src/app/components/sunburst/sunburst.html
+++ b/client/src/app/components/sunburst/sunburst.html
@@ -1,4 +1,4 @@
-<os-tray caption="Template" content="tray-content-block">
+<os-tray caption="Sunburst" content="tray-content-block">
     <section class="tray-content">
             <div class="row">
                 <div class="col-xs-12 form-label">
@@ -40,34 +40,11 @@
 
 <section class="tray-content-block">
     <div class="container-fluid">
-        <h2>Template</h2>
-      <p>
-        To add a new analysis tool, follow these steps:
-      </p>
-
-       <ol>
-        <li> Create a New Component
-          <ul>
-          <li> Copy the template component within apps/components/
-          <li> Update the 3 files to match the new tool needs
-          <li> Replace all "template" with the name of the new method
-          <li> Update the HTML file to define the necessary user interface
-          <li> Handle all stylistic changes within the <>.scss file
-          <li> Change the <>.directive.js file for data and input handling
-          </ul>
-       <li> Add the tool to the application menu
-          <ul>
-          <li> Within app/components/tools/tools.directive, include the name, route, image, and copy (text) describing the tool.
-          </ul>
-       <li> Link the tool using the Rest API
-          <ul>
-          <li> Within app/index.route.js, add the state url, template, and authentication settings.
-          </ul>
-       </ol>
-
-    <p>  Add interactions with R through the R message handler.  This can be accessed through the osApi
-         variable in the AngularJS directive.
-    </p>
+        <h2>Sunburst</h2>
+    <form>
+      <label><input type="radio" name="mode" value="size" checked> Size</label>
+      <label><input type="radio" name="mode" value="patient"> Patient</label>
+    </form>
 
     </div>
 </section>
