--- a/client/src/app/components/sunburst/sunburst.html
+++ b/client/src/app/components/sunburst/sunburst.html
@@ -40,11 +40,8 @@
 
 <section class="tray-content-block">
     <div class="container-fluid">
-        <h2>Sunburst</h2>
-    <form>
-      <label><input type="radio" name="mode" value="size" checked> Size</label>
-      <label><input type="radio" name="mode" value="patient"> Patient</label>
-    </form>
+      <h2>Sunburst</h2>
+      <div id="sunburst-chart"></div>
 
     </div>
 </section>
