--- a/client/src/app/components/sunburst/sunburst.html
+++ b/client/src/app/components/sunburst/sunburst.html
@@ -2,17 +2,6 @@
     <section class="tray-content">
             <div class="row">
                 <div class="col-xs-12 form-label">
-                    <h2>Filters</h2>
-                </div>
-                <div class="col-xs-12 form-item">
-                    <label>Age At Diagnosis</label>
-                    <div range-slider min="vm.diagnosisMinValue" model-min="vm.diagnosisMin" max="vm.diagnosisMaxValue" model-max="vm.diagnosisMax" show-values="true" attach-handle-values="true" on-handle-up="vm.applyFilter()"></div>
-                </div>
-                <div class="col-xs-12 form-item">
-                    <label>Search</label>
-                    <input type="text" class="ngrs-range-slider" style="width: 100%;" ng-model="vm.search">
-                </div>
-                <div class="col-xs-12 form-label">
                     <h2>Patient Cohort</h2>
                 </div>
                 <div class="dropdown bs-dropdown">
@@ -42,6 +31,11 @@
     <div class="container-fluid">
       <h2>Sunburst</h2>
       <div id="sunburst-chart"></div>
+
+      <form>
+        <label><input type="radio" name="mode" value="patient"> Patient</label>
+        <label><input type="radio" name="mode" value="count" checked> Count</label>
+      </form>
 
     </div>
 </section>
